# aliasm

./: CMakeLists.txt  README.md  aliasm
src/: file.cpp  main.cpp
src/ui/: addalias.cpp  addalias.h  aliaslist.cpp  aliaslist.h  confirm.cpp  confirm.h  export.cpp  export.h  featurerow.cpp  featurerow.h  mainwindow.cpp  mainwindow.h  newaliaswindow.cpp  newaliaswindow.h  window.h
src/util/: file.cpp  file.h
